Revert "Fix cargo local with Tomcat 9.0.100"